    - added friends_incoming and friendships_outgoing methods

3.12000 2010-03-19
    - added new API methods: retweeted_by and retweeted_by_ids
    - fixed: t/51_since.t was actually connecting to twitter

3.11012 2010-03-13
    - fixed: added fallback since Test::More 0.95_01 does not stringify in "is" (tokuhirom)

3.11011 2010-03-11
    - fixed documentation to include lookup_users

3.11010 2010-03-11
    - Added lookup_users API method

3.11009 2010-03-10
    - Added RetryOnError trait (see perldoc Net::Twitter::Role::RetryOnError)
    - Import Sclar::Util::blessed in the POD Synopsis to make it clear callers need to do so (RT#55283)
    - Use newly documented "preferred" oauth endpoints: http://api.twitter.com/oauth/*
    - Added SimulateCursors trait for Identi.ca compatibility

3.11008 2010-03-02
    - Added support for new api methods: reverse_geocode, geo_id
    - Updated method "update" with new parameters: place_id, display_coordinates

3.11007 2010-02-27
    - xAuth implemented and tested

3.11006_01 2010-02-26
    - xAuth implemented: @oauth = $nt->xauth($username, $password);

3.11006 2010-02-25
    - Fixed: unicode.t skip needed number of tests to skip (miyagawa)

3.11005 2010-02-25
    - Fixed: image updates accept a single array ref argument (RT#54422)
    - Fixed: "since" synthetic arg with InflateObjects role (RT#54901)
    - Fixed: utf8 encoding error for latin1 using Basic Authentication
    - Allow a pre-created user agent object as argument to new (ua => $ua)
    - FAQ: How do I get Twitter to display something other than "from Perl Net::Twitter"?

3.11004 2010-02-09
    - Removed an extraneous tar ball from the distribution (no code changes)

3.11003 2010-01-29
    - Renamed "retweeted_of_me" REST API call to the correct "retweets_of_me" (Dan Moore @mgrdcm)
    - Back the Moose requirement down to 0.09 (earliest version with native traits)

3.11002 2010-01-28
    - Use Moose 0.94 with native traits (resolves CPAN testers failing reports)
