@@ -1,3 +1,4 @@
+    - fixed tests: plan was called twice when LWP was too old
     - added friends_incoming and friendships_outgoing methods
 
 3.12000 2010-03-19
